--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ button#enter {
 	font-size: 18px;
 	padding: 5px 0;
     margin: 2px 10%;
-    position: absolute;
-    top: 20px;
+    position: fixed;
+    top: 5px;
 }
 
 button#light {
